# MicroTune

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.md  test_gpu.py
api/: app.py
datasets/: download_gsm8k.py  preprocess.py  tokenize.py
evaluation/: compare.py  eval.py
microtune_final/: README.md  adapter_config.json  adapter_model.safetensors
results/: compare_samples.json  eval_metrics.json
scripts/: export_gguf.md  merge_lora.py
training/: train.py
ui/: app.py
