[project]
name = "microtune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "evaluate",
    "fastapi",
    "gradio",
    "matplotlib",
    "peft",
    "torch",
    "transformers",
    "trl",
    "uvicorn",
    "wandb",
]
