[project]
name = "microtune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.28.0,<1.0.0",
    "bitsandbytes>=0.43.0,<1.0.0",
    "datasets>=2.18.0,<3.0.0",
    "evaluate>=0.4.0,<1.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "gradio>=4.20.0,<5.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "peft>=0.10.0,<1.0.0",
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.38.0,<5.0.0",
    "trl>=0.8.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "wandb>=0.16.0,<1.0.0",
]
